--- a/src/example/App/App.css
+++ b/src/example/App/App.css
@@ -9,6 +9,7 @@
   height: 200px;
   background: #f0f5f0;
   padding: 5px;
+  margin-bottom: 50px;
 }
 
 .carousel2 {
@@ -81,7 +82,7 @@
 
 .tileFullwidth {
   height: 100%;
-  width: 100%;
+  width: 465px;
 }
 
 [role="navigation"] {
